# cpx

./: Cargo.toml  LICENSE  README.md
benchmarks/: bench.sh  benchmarked.md  benchmarked_xcp.md
docs/: benchmarks.md  configuration.md  examples.md
src/: main.rs
src/cli/: args.rs
src/config/: schema.rs
src/core/: copy.rs  fast_copy.rs  mod.rs  progress_bar.rs
src/utility/: backup.rs  exclude.rs  helper.rs  mod.rs  preprocess.rs  preserve.rs  progress_bar.rs
tests/: intergration.rs
tests/gnu/: abuse.sh  acl.sh  cpx-HL.sh  cpx-deref.sh  cpx-i.sh
