[package]
name = "cpx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
filetime = "0.2.26"
futures = "0.3.31"
indicatif = {version = "0.18.3"}
libc = "0.2.178"
rustix = {version = "1.1.2", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
nix = { version = "0.30.1", features = ["zerocopy"] }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.13"
tokio-test = "0.4"
