[package]
name = "cpx"
description = "A modern, fast file copying tool"
repository = "https://github.com/11happy/cpx"
readme = "README_CRATES.md"
keywords = ["copy", "file", "cli", "backup", "utility"]
version = "0.1.3"
authors = ["Bhuminjay Soni <bhuminjaysoni@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
filetime = "0.2.26"
futures = "0.3.31"
indicatif = {version = "0.18.3"}
libc = "0.2.178"
xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
nix = { version = "0.30.1", features = ["zerocopy"] }
jwalk = "0.8.1"
num_cpus = "1.17.0"
pathdiff = "0.2.3"
reflink-copy = "0.1.28"
rayon = "1.11.0"
xattr = "1.6.1"
selinux = {version = "0.5.3", optional = true}
globset = "0.4.18"
serde = {version= "1.0.228", features = ["derive"]}
toml = "0.9.11"
dirs = "6.0.0"
colored = "3.1.1"
signal-hook = "0.4.1"

[features]
default = []
selinux-support = ["selinux"]

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.13"
tokio-test = "0.4"

[workspace]
